--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-
+h1 {
+  color: royalblue;
+  font-size: 78px;
+}
+.note 
+{
+  font-size: 12px;
+}
 .header {
   text-align: center;
-  padding: 32px;
+ 
 }
 
 .row {
@@ -52,7 +59,7 @@ body {
 }
 
 .btn.active {
-  background-color: #666;
+  background-color: royalblue;
   color: white;
 }
 </style>
@@ -62,7 +69,8 @@ body {
 <!-- Header -->
 <div class="header" id="myHeader">
   <h1>hai.pics</h1>
-  <p>Click on the buttons to change the grid view.</p>
+  <p class="note">some of my pics</p>
+  <p>select row length:</p>
   <button class="btn" onclick="one()">1</button>
   <button class="btn active" onclick="two()">2</button>
   <button class="btn" onclick="four()">4</button>
