--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@ footer {
 }
 </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HZFVMW58FD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HZFVMW58FD');
+</script>
 <body>
 
 <!-- Header -->
