fix page highlight on 2nd page

--- a/nextpage.html
+++ b/nextpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * {
@@ -124,8 +125,8 @@ footer {
 </div>
 
 <footer>
-  <button class="btn active" onclick='window.location.href = "index.html"'>1</button>
-  <button class="btn" onclick='window.location.href = "nextpage.html"'>2</button>
+  <button class="btn " onclick='window.location.href = "index.html"'>1</button>
+  <button class="btn active" onclick='window.location.href = "nextpage.html"'>2</button>
   <!-- <button class="btn" onclick="four()">3</button> -->
 </footer>
 
