--- a/3.html
+++ b/3.html
@@ -99,7 +99,7 @@ footer {
     
   </div>
   <div class="column">
-     <img src="w3images/velo.jpg" style="width:100%">
+    <img src="w3images/lake.jpg" style="width:100%">
     <img src="w3images/amsbuilding.jpg" style="width:100%">
    
 
