--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ footer {
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HZFVMW58FD"></script>
+<script src="https://unpkg.com/scrollreveal"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -115,6 +116,10 @@ footer {
     
   </div>
 </div>
+<script>
+    ScrollReveal().reveal('.column');
+ 
+  </script>
 <footer>
  <button class="btn active" onclick='window.location.href = "index.html"'>1</button>
   <button class="btn" onclick='window.location.href = "2.html"'>2</button>
