--- a/2.html
+++ b/2.html
@@ -69,6 +69,7 @@ footer {
   color: white;
 }
 </style>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HZFVMW58FD"></script>
