reduced image sizes

--- a/index.html
+++ b/index.html
@@ -94,14 +94,17 @@ footer {
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <img src="w3images/pbccar.jpeg"   style="width:100%">
+    <img src="w3images/miamib.png"   style="width:100%">
+   
     <img src="w3images/pbhome.jpeg"   style="width:100%">
+   
   
     
   </div>
   <div class="column">
+    <img src="w3images/pbccar.jpeg"   style="width:100%">
     <img src="w3images/palmbeach.jpeg"  style="width:100%">
-    <img src="w3images/canandaigua.jpg"   style="width:100%">
+   
    
 
    
