--- a/2.html
+++ b/2.html
@@ -3,9 +3,7 @@
 <head>
   
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&display=swap" rel="stylesheet">
+
 <style>
 * {
   box-sizing: border-box;
@@ -17,12 +15,12 @@
 }
 body {
   margin: 0;
-  font-family: "Bungee Tint", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   background-color: black; /* Change the background color to black */
   color: white; /* Optional: Change text color to white for better contrast */
 }
 h1 {
-  color: rgb(255, 255, 255);
+  color: rgb(255, 0, 0);
   font-size: 78px;
 }
 .note 
