--- a/3.html
+++ b/3.html
@@ -2,22 +2,17 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&display=swap" rel="stylesheet">
+
 <style>
 * {
   box-sizing: border-box;
 }
-.bungee-tint-regular {
-  font-family: "Bungee Tint", sans-serif;
-  font-weight: 200;
-  font-style: normal;
-}
+
 body {
   margin: 0;
-  font-family: "Bungee Tint", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   background-color: black;
+color: white;
 }
 h1 {
   color: royalblue;
