--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
   color: white; /* Optional: Change text color to white for better contrast */
 }
 h1 {
-  color: royalblue;
+  color: rgb(255, 0, 0);
   font-size: 78px;
 }
 .note 
