--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   background-color: black; /* Change the background color to black */
   color: white; /* Optional: Change text color to white for better contrast */
 }
