--- a/3.html
+++ b/3.html
@@ -11,8 +11,8 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: black;
-color: white;
+  background-color: black; /* Change the background color to black */
+  color: white; /* Optional: Change text color to white for better contrast */
 }
 h1 {
   color: rgb(225, 0, 0);
