--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: black; /* Change the background color to black */
+  background-color: rgba(123, 181, 188, 0.436); /* Change the background color to black */
   color: white; /* Optional: Change text color to white for better contrast */
 }
 h1 {
-  color: rgb(255, 0, 0);
+  color: rgb(253, 255, 230);
   font-size: 78px;
 }
 .note 
