--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   background-color: rgba(123, 181, 188, 0.436); /* Change the background color to black */
-  color: white; /* Optional: Change text color to white for better contrast */
+  color: rgb(253, 255, 230);
 }
 h1 {
   color: rgb(253, 255, 230);
@@ -20,7 +20,7 @@ h1 {
 }
 .note 
 {
-  font-size: 12px;
+  font-size: 13px;
 }
 .header {
   text-align: center;
@@ -57,7 +57,7 @@ footer {
   border: none;
   outline: none;
   padding: 10px 16px;
-  background-color: #f1f1f1;
+  background-color: rgb(253, 255, 230);
   cursor: pointer;
   font-size: 18px;
 }
@@ -67,7 +67,7 @@ footer {
 }
 
 .btn.active {
-  background-color: royalblue;
+  background-color: rgba(65, 105, 225, 0.442);
   color: white;
 }
 </style>
