--- a/2.html
+++ b/2.html
@@ -65,6 +65,7 @@ footer {
   background-color: rgb(253, 255, 230);
   cursor: pointer;
   font-size: 18px;
+  color:  rgba(123, 181, 188, 0.436);
 }
 
 .btn:hover {
