--- a/3.html
+++ b/3.html
@@ -13,6 +13,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: rgba(123, 181, 188, 0.436); 
   color: rgb(253, 255, 230);
+}
 h1 {
   color: rgb(253, 255, 230);
   font-size: 78px;
@@ -57,12 +58,15 @@ footer {
   outline: none;
   padding: 10px 16px;
   background-color: rgb(253, 255, 230);
+  
   cursor: pointer;
   font-size: 18px;
+  color:  rgba(123, 181, 188, 0.436);
 }
 
 .btn:hover {
   background-color: #ddd;
+  color:  rgb(223, 244, 247);
 }
 
 .btn.active {
